# chad

./: Cargo.toml
chad-api/: Cargo.toml
chad-api/lang/: en_US.json
chad-api/src/: lib.rs  main.rs  text.rs
chad-api/src/classification/: classify.rs  mod.rs
chad-api/src/db/: mod.rs
chad-api/src/news/: date_format.rs  mod.rs  request.rs
chad-api/src/nlp/: mod.rs  question_answering.rs  topic.rs
chad-api/src/status/: mod.rs
chad-api/src/weather/: mod.rs  request.rs
chad-api/src/wiki_qa/: mod.rs  question_answering.rs
chad-bot/: Cargo.toml
chad-bot/src/: main.rs
chad-bot/src/commands/: message.rs
