[package]
authors = ["Carter Reeb <me@carteris.online>"]
edition = "2021"
name = "chad-api"
version = "0.1.0"

[dependencies]
actix-web = "4.0.0-beta.9"
anyhow = "1"
chrono = "0.4"
derive_more = "0.99"
env_logger = "0.9"
json-gettext = "4"
log = "0.4"
once_cell = "1"
parking_lot = "0.11"
redis = "0.21"
reqwest = {version = "0.11", features = ["json"]}
rust-bert = "0.16"
serde = "1"
serde_json = "1"
strum = {version = "0.21", features = ["derive"]}
tch = "0.5"
wikipedia = "0.3"
