[package]
authors = ["Carter Reeb <me@carteris.online>"]
edition = "2018"
name = "chad-bot"
version = "0.1.0"

[dependencies]
async-trait = "0.1"
chad-api = {path = "../chad-api"}
json5 = "0.4"
log = "0.4"
once_cell = "1"
regex = "1"
reqwest = {version = "0.11", features = ["json"]}
serde = "1"
serenity = {version = "0.10", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache"]}
tokio = {version = "1", features = ["macros", "signal", "rt-multi-thread"]}
